public enum ISAVAILABLE {
    PARKED,AVAILABLE;
}
