import java.util.ArrayList;
import java.util.List;

public class ParkingLot {
    private List<ParkingFloor> ParkingFloor = new ArrayList<>();

}
