public enum VEHICLETYPE {
    BIKE,CAR,LORRY;
}
